tests/models/struct/unnamed/usize/fail/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2.0)]
    usize
);
fn main() {}
